force-app/main/default/objects/Quickbooks__mdt/fields/Company_Info__c.field-meta.xml
<CustomField>
    <fullName>Company_Info__c</fullName>
    <defaultValue>&quot;/v3/company/{realmId}/companyinfo/{realmID}&quot;</defaultValue>
    <label>Company_Info</label>
    <type>Url</type>
</CustomField>