force-app/main/default/objects/Quickbooks__mdt/fields/Create_Customer__c.field-meta.xml
<CustomField>
    <fullName>Create_Customer__c</fullName>
    <defaultValue>&quot;/v3/company/{realmId}/customer?minorversion=&quot;</defaultValue>
    <label>Create_Customer</label>
    <type>Url</type>
</CustomField>