force-app/main/default/objects/Quickbooks__mdt/fields/Create_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Create_Invoice__c</fullName>
    <defaultValue>&quot;/v3/company/{realmId}/invoice?minorversion=&quot;</defaultValue>
    <label>Create_Invoice</label>
    <type>Url</type>
</CustomField>