force-app/main/default/objects/Quickbooks__mdt/fields/Create_Payment__c.field-meta.xml
<CustomField>
    <fullName>Create_Payment__c</fullName>
    <defaultValue>&quot;/v3/company/{realmId}/payment?minorversion=&quot;</defaultValue>
    <label>Create_Payment</label>
    <type>Url</type>
</CustomField>