force-app/main/default/objects/Quickbooks__mdt/fields/Customer_Url__c.field-meta.xml
<CustomField>
    <fullName>Customer_Url__c</fullName>
    <defaultValue>&quot;/v3/company/{realmId}/query?query=select * from Customer&amp;minorversion=&quot;</defaultValue>
    <label>Customer_Url</label>
    <type>Url</type>
</CustomField>