force-app/main/default/objects/Quickbooks__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prod</fullName>
                <default>true</default>
                <label>Prod</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Scratch Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>