force-app/main/default/objects/Quickbooks__mdt/fields/expires_in_time__c.field-meta.xml
<CustomField>
    <fullName>expires_in_time__c</fullName>
    <label>expires_in_time</label>
    <type>DateTime</type>
</CustomField>