force-app/main/default/objects/Quickbooks__mdt/fields/Production_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Production_Base_URL__c</fullName>
    <defaultValue>&quot;https://quickbooks.api.intuit.com&quot;</defaultValue>
    <label>Production_Base_URL</label>
    <type>Url</type>
</CustomField>