force-app/main/default/objects/Quickbooks__mdt/fields/refresh_token__c.field-meta.xml
<CustomField>
    <fullName>refresh_token__c</fullName>
    <label>refresh_token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>