force-app/main/default/objects/Quickbooks__mdt/fields/Sandbox_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Base_URL__c</fullName>
    <defaultValue>&quot;https://sandbox-quickbooks.api.intuit.com&quot;</defaultValue>
    <label>Sandbox_Base_URL</label>
    <type>Url</type>
</CustomField>